# polysh

./: .gitignore  Cargo.toml  README.md  README.zh-CH.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: detector.rs  lib.rs  tokenizer.rs  translator.rs
src/mappings/: data.rs  dynamic.rs  mod.rs
tests/: detector.rs  integration.rs  registry.rs  tokenizer_edge.rs  translator_edge.rs
